# CardanoBurn

./: .gitignore
nix/: haskell.nix  sources.json
src/BurnValidator/: BurnValidator.cabal  CHANGELOG.md  cabal.project  script.addr
src/BurnValidator/compiler/: Main.hs
src/BurnValidator/validator/: Burn.hs
src/CardanoBurn.UI/: Program.cs  _Imports.razor  next.config.js  package-lock.json  package.json  tailwind.config.cjs  tailwind.config.js
src/CardanoBurn.UI/Pages/: Counter.razor  Index.razor
src/CardanoBurn.UI/Properties/: launchSettings.json
src/CardanoBurn.UI/Shared/: Header.razor  MainLayout.razor
src/CardanoBurn.UI/pages/: _app.tsx  index.tsx
src/CardanoBurn.UI/public/: index.html
src/CardanoBurn.UI/src/: App.tsx  index.tsx
src/CardanoBurn.UI/styles/: globals.css
src/CardanoBurn.UI/wwwroot/: index.html
