cabal-version:      2.4
name:               BurnValidator
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Clark Alesna
maintainer:         clark@saib.dev

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common c
  default-language: Haskell2010
  default-extensions:
    ExplicitForAll
    ScopedTypeVariables
    DeriveGeneric
    StandaloneDeriving
    DeriveLift
    GeneralizedNewtypeDeriving
    DeriveFunctor
    DeriveFoldable
    DeriveTraversable
    LambdaCase
    MultiParamTypeClasses
    TypeOperators
    FlexibleInstances
    NamedFieldPuns
    TypeFamilies
    FlexibleContexts
    DeriveAnyClass
    DerivingStrategies
    DerivingVia
    DataKinds
  ghc-options:
    -Wall -Werror -Wmissing-export-lists -Wcompat
    -Wnoncanonical-monad-instances -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wmissing-deriving-strategies
    -Wredundant-constraints -Widentities
    -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas

library
  import: c
  hs-source-dirs: validator
  exposed-modules: Burn
  build-depends:
    , aeson
    , base ^>= 4.14.1.0
    , bytestring
    , cardano-api
    , cardano-ledger-alonzo
    , containers
    , directory >= 1.3.6.0
    , freer-simple
    , hex-text
    , lens -any
    , plutus-core
    , plutus-ledger
    , plutus-ledger-api
    , plutus-tx
    , plutus-tx-plugin
    , pretty-show
    , pretty-simple
    , prettyprinter
    , regex-tdfa ^>= 1.3.1.0
    , req ^>= 3.9.0
    , serialise
    , plutarch
    , template-haskell >= 2.16.0.0
    , text
    , uuid
    , plutonomy
    , generics-sop

executable compiler
  import: c
  main-is:          Main.hs
  hs-source-dirs:   compiler, validator
  other-modules:    Burn
  default-language: Haskell2010
  build-depends:    base
                    , BurnValidator
                    , plutus-ledger
                    , plutus-ledger-api
                    , bytestring
                    , plutus-tx
                    , serialise
                    , cardano-api
                    , plutus-tx-plugin
                    , directory
                    , aeson
                    , text
  ghc-options:      -Wall
                    -Wcompat
                    -Wincomplete-record-updates
                    -Wincomplete-uni-patterns
                    -Wredundant-constraints
                    -Werror
                    -Wpartial-fields
                    -fobject-code
                    -fno-ignore-interface-pragmas
                    -fno-omit-interface-pragmas